Changed method request to request_merchant

--- a/app/views/merchant_mailer/thank_you.html.erb
+++ b/app/views/merchant_mailer/thank_you.html.erb
@@ -1,9 +1,9 @@
 <h1>Thank you!</h1>
 
-Hi <%= @merchant.email %>,
+<p>Hi <%= @merchant.email %>,</p>
 
-Thank you for your application to Heron Market!
-Your application will be reviewed and you will be contacted shortly.
+<p>Thank you for your application to Heron Market!</p>
+<p>Your application will be reviewed and you will be contacted shortly.</p>
 
-Kind regards,
-<em>Heron Market Team</em>
+<p>Kind regards,</p>
+<p><em>Heron Market Team</em></p>
