Updated request_merchant view with an unordered list

--- a/app/views/merchant_mailer/merchant_request.html.erb
+++ b/app/views/merchant_mailer/merchant_request.html.erb
@@ -1,8 +1,15 @@
 <h1>New Merchant Request</h1>
 
-<p>
-  <%= @post.first_name %>
-  <%= @post.last_name %>
-  <%= @post.email %>
-  <%= @post.description %>
-</p>
+<ul>
+  <li><%= @post.first_name %></li>
+  <li><%= @post.last_name %></li>
+  <li><%= @post.email %></li>
+  <li><%= @post.location %></li>
+  <li><%= @post.category %></li>
+  <li><%= @post.labels %></li>
+  <li><%= @post.website %></li>
+  <li><%= @post.instagram %></li>
+  <li><%= @post.facebook %></li>
+  <li><%= @post.description %></li>
+</ul>
+
