Updated merchant request category in the email view and seeds

--- a/app/views/merchant_mailer/merchant_request.html.erb
+++ b/app/views/merchant_mailer/merchant_request.html.erb
@@ -5,7 +5,7 @@
   <li><%= @post.last_name %></li>
   <li><%= @post.email %></li>
   <li><%= @post.location %></li>
-  <li><%= @post.category %></li>
+  <li><%= @post.category_id %></li>
   <li><%= @post.labels %></li>
   <li><%= @post.website %></li>
   <li><%= @post.instagram %></li>
