--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -15,12 +15,16 @@
   width: 50%;
   opacity: 0.3;
   margin-left: 8px;
+  &:hover{
+    cursor: pointer;
+  }
 }
 .active{
   opacity: 1;
 }
+
 .hidden{
-  display: none;
+  display:none!important;
 }
 
 .tab-content{
@@ -28,4 +32,14 @@
     text-align: center;
     font-size: 24px;
   }
+}
+.user-forms{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+form{
+  width: 80%;
 }
