--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,12 +1,19 @@
+.connexion-forms{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin:50px;
+}
+
 .tab-group{
   list-style: none;
   display: flex;
   justify-content: space-evenly;
   padding-left: 0;
   text-align: center;
-  a{
-    color: black;
-    text-decoration: none;
+  width: 50%;
+  li{
+    align-self:center;
   }
 }
 
@@ -28,6 +35,7 @@
 }
 
 .tab-content{
+  width: 70%;
   h2{
     text-align: center;
     font-size: 24px;
