--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,20 @@
 <div class="content">
-  <ul class="tab-group">
-    <li id="signup-tab" class="tab active">Sign Up</li>
-    <li id="login-tab" class="tab">Log In</li>
-  </ul>
+  <div class="connexion-forms">
+    <ul class="tab-group">
+      <li id="signup-tab" class="tab active">Sign Up</li>
+      <li id="login-tab" class="tab">Log In</li>
+    </ul>
 
-    <div class="tab-content">
-      <div id="signup" class="user-forms">
-        <%= render 'devise/registrations/new' %>
-      </div>
+      <div class="tab-content">
+        <div id="signup" class="user-forms">
+          <%= render 'devise/registrations/new' %>
+        </div>
 
-      <div id="login" class="user-forms hidden">
-        <%= render 'devise/sessions/new' %>
+        <div id="login" class="user-forms hidden">
+          <%= render 'devise/sessions/new' %>
+        </div>
       </div>
-    </div>
+  </div>
 </div>
 
 
