--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -53,6 +53,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12">
+            <%= f.submit "APPLY", class: "add-cart-btn" %>
           </div>
         </div>
       <% end %>
