--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,7 +23,7 @@
             <%= f.input :location %>
           </div>
           <div class="col-sm-6">
-            <%= f.input :category_ids, label: "Category", collection: Category.all %>
+            <%= f.input :category_id, label: "Category", collection: Category.all %>
           </div>
           <div class="col-sm-6">
           </div>
