--- a/app/views/merchant_mailer/merchant_request.html.erb
+++ b/app/views/merchant_mailer/merchant_request.html.erb
@@ -1,18 +1,18 @@
 <h1>New Merchant Request</h1>
 
 <ul>
-  <li><%= @post.first_name %></li>
-  <li><%= @post.last_name %></li>
-  <li><%= @post.email %></li>
-  <li><%= @post.location %></li>
-  <li><%= @post.category.name %></li>
-  <li><% @post.labels.each do |label| %>
+  <li>First Name:<%= @post.first_name %></li>
+  <li>Last Name: <%= @post.last_name %></li>
+  <li>Email: <%= @post.email %></li>
+  <li>Location: <%= @post.location %></li>
+  <li>Category: <%= @post.category.name %></li>
+  <li>Labels: <% @post.labels.each do |label| %>
     <%= label.name %>,
   <% end %>
   </li>
-  <li><%= @post.website %></li>
-  <li><%= @post.instagram %></li>
-  <li><%= @post.facebook %></li>
-  <li><%= @post.description %></li>
+  <li>Website: <%= @post.website %></li>
+  <li>Instagram: <%= @post.instagram %></li>
+  <li>Facebook: <%= @post.facebook %></li>
+  <li>Description: <%= @post.description %></li>
 </ul>
 
