design the responsive version of footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -35,6 +35,20 @@
         <a href="#"><%= image_tag 'instagram-icon' %></a>
       </div>
     </div>
+    <div class="footer-item-mobile">
+      <ul>
+        <li><a href="#">À propos</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Termes et conditions</a></li>
+        <li><a href="#">Politiques de confidentialité</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+
+      <div class="footer-socials">
+        <a href="#"><%= image_tag 'facebook-icon' %></a>
+        <a href="#"><%= image_tag 'instagram-icon' %></a>
+      </div>
+    </div>
   </div>
   <div class="footer-credit">
     <p>© 2020 - Héron</p>
