--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -42,3 +42,48 @@
       color: $gray;
     }
 }
+.footer-item-mobile{
+  display: none;
+}
+
+/* For a screen < 960px, this CSS will be read */
+@media (max-width: 960px) {
+  .footer-credit{
+    width: 100%;
+    margin-top: 20px;
+  }
+}
+
+/* For a screen < 720px, this CSS will be read */
+@media (max-width: 720px) {
+
+}
+
+/* For a screen < 540px, this CSS will be read */
+@media (max-width: 540px) {
+  .footer-credit{
+    display: none;
+  }
+  .footer-item{
+    display:none;
+  }
+  .footer-item-mobile{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-menu{
+    justify-content: center;
+    border-top: 1px solid $light-gray;
+    padding-top: 16px;
+  }
+}
+
+
+
+
+
+
+
+
