--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -42,3 +42,79 @@
     width: 16px;
   }
 }
+//mobile menu
+.burger-menu{
+  display:none;
+  ul{
+    padding-left: 0;
+  }
+}
+.nav-link{
+  img{
+    width: 20px;
+  }
+}
+.mobile-icon-menu{
+  display: none;
+}
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .nav-bar{
+      justify-content: space-between;
+      padding:0;
+      li{
+        margin-left: 0;
+      }
+    }
+    .categories-list{
+      display: none;
+    }
+    .burger-menu{
+      display: block;
+    }
+    .main-menu{
+      display: none;
+    }
+    .mobile-icon-menu{
+      display:block;
+      a{
+        padding:8px 16px;
+      }
+      img{
+        width: 20px;
+      }
+    }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .nav-bar{
+    justify-content: space-between;
+    padding:0;
+    li{
+      margin-left: 0;
+    }
+  }
+  .nav-item{
+    margin-left: 0;
+  }
+  .categories-list{
+    display: none;
+  }
+  .burger-menu{
+    display: block;
+  }
+  .main-menu{
+    display: none;
+  }
+  .mobile-icon-menu{
+    display:block;
+    img{
+      width: 20px;
+    }
+  }
+}
