--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,19 @@
 <div class="nav-bar">
+  <div class="burger-menu">
+    <ul>
+      <li class="nav-item dropdown">
+        <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= image_tag 'open-menu.svg' %>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+    </ul>
+  </div>
   <div class="logo">
     <a href="#"><%= image_tag 'heron-logo.png' %></a>
   </div>
@@ -13,8 +28,13 @@
     <ul class="icon-menu">
       <li class="icon"><a href="#"><%= image_tag 'user-icon.svg' %></a></li>
       <li class="icon"><a href="#"><%= image_tag 'love-list-icon.svg' %></a></li>
-      <li class="icon"><a href="#"><%= image_tag 'shopping-bag-icon.svg' %></a></li>
+      <li class="icon" id="shopping-bag"><a href="#"><%= image_tag 'shopping-bag-icon.svg' %></a></li>
       <li><a href="#">EN</a></li>
+    </ul>
+  </div>
+  <div class="mobile-icon-menu">
+    <ul class="icon-menu">
+      <li class="icon" id="shopping-bag"><a href="#"><%= image_tag 'shopping-bag-icon.svg' %></a></li>
     </ul>
   </div>
 </div>
