work on the dorpdown menu for mobile

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -15,6 +15,7 @@
 @import "merchant-details";
 @import "merchant-header";
 @import "navbar";
+@import "overlay";
 @import "product-card";
 @import "product-comment";
 @import "product-details-card";
