--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,14 +2,17 @@
   <div class="burger-menu">
     <ul>
       <li class="nav-item dropdown">
-        <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link" href="#" id="burgermenu">
           <%= image_tag 'open-menu.svg' %>
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+        <div id="myNav" class="overlay hidden">
+          <a href="#" class="closebtn">&times;</a>
+          <div class="overlay-content">
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+          </div>
         </div>
       </li>
     </ul>
@@ -38,3 +41,5 @@
     </ul>
   </div>
 </div>
+
+<!-- role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" -->
