Assigned registration form with class form to prevent from applying the css to all forms throughout the marketplace

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,10 @@
-<%= render 'form' %>
+<div class="content merchant-containe">
+  <div class="row merchant-form">
+    <div class="col-xs-12 col-sm-10">
+      <%= render 'form' %>
+    </div>
+    <div class="col-xs-12 col-sm-10">
+      <%= render 'confirmation' %>
+    </div>
+  </div>
+</div>
