--- a/app/views/posts/_confirmation.html.erb
+++ b/app/views/posts/_confirmation.html.erb
@@ -1,6 +1,6 @@
 <div class="content merchant-container">
   <div class="row merchant-form">
-    <div class="col-xs-12 col-sm-9 col-sm-offset-3">
+    <div class="col-xs-12 col-sm-10">
       <h1>Thank You for for application</h1>
       <h6>We will review your application and we will contact you shortly!</h6>
       <p><em>- Heron Market Team</em></p>
