--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -39,7 +39,7 @@
 
 /* For a screen < 540px, this CSS will be read */
 @media (max-width: 540px) {
-   .product-carousel {
+   #product-carousel{
     justify-self: center;
   }
 }
