--- a/app/assets/stylesheets/components/_product-details-card.scss
+++ b/app/assets/stylesheets/components/_product-details-card.scss
@@ -99,6 +99,7 @@
 @media (max-width: 540px) {
   .product-details-card {
     grid-template-rows: 1fr 1fr;
+    grid-template-columns: none;
   }
 
   .product-details-header {
