Added check designs svg to confirmation view

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,9 @@
-<div class="content merchant-containe">
+<div class="content merchant-container">
   <div class="row merchant-form">
     <div class="col-xs-12 col-sm-10">
       <%= render 'form' %>
     </div>
-    <div class="col-xs-12 col-sm-10">
+    <div class="col-xs-12 col-sm-10 confirmation-message">
       <%= render 'confirmation' %>
     </div>
   </div>
