--- a/app/assets/stylesheets/pages/_merchant.scss
+++ b/app/assets/stylesheets/pages/_merchant.scss
@@ -1,3 +1,34 @@
 .merchant-form {
   justify-content: center;
 }
+
+.confirmation-message{
+  margin-top: 32px;
+  text-align: center;
+  align-items: center;
+}
+
+.merchant-form-message {
+  padding-bottom: 32px;
+}
+
+.merchant-form-content{
+  margin: 40px 50px;
+  justify-content: center;
+}
+
+svg {
+  width: 300px;
+  display: block;
+  margin: 40px auto 0;
+}
+
+
+p {
+  text-align: center;
+  margin: 20px 0 60px;
+  font-size: 1.25em;
+  &.success {
+    color: #73AF55;
+  }
+}
