--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-10">
+  <div class="col-sm-12 merchant-form-message">
     <h1>Merchant Application</h1>
     <h6>Heron Market pride itself in offering products and promoting brands
       whose value align with ours. If one of the following apply to you,
