--- a/app/assets/stylesheets/components/_overlay.scss
+++ b/app/assets/stylesheets/components/_overlay.scss
@@ -5,44 +5,59 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: white;
+  background-color: rgb(255,255,255);
   overflow-x: hidden;
   transition: 0.5s;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 12px;
 }
 
 .overlay-content {
-  position: relative;
-  top: 25%;
   width: 100%;
-  text-align: center;
-  margin-top: 30px;
+  color: $gray;
+  font-family: $poppins;
+  p{
+    font-size: 30px;
+    margin-bottom: 0;
+  }
+  ul{
+    margin-bottom: 8px;
+  }
+  li{
+    font-size: 20px;
+    padding-left: 10px;
+    font-weight: 200;
+  }
+}
+.overlay-left{
+  display: flex;
+  flex-direction: column;
+  .logo{
+    margin: 6px 0;
+  }
+}
+.overlay-menu{
+  margin-top: 12px;
 }
 
 .overlay a {
-  padding: 8px;
   text-decoration: none;
-  font-size: 36px;
-  color: #818181;
   display: block;
   transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
-  color: #f1f1f1;
+  &:hover{
+  text-decoration: underline;
+  }
 }
 
 .overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-}
-
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-  font-size: 40px;
-  top: 15px;
-  right: 35px;
+  width: 40px;
+  img{
+    background-color:$light-blue;
+    padding: 6px;
+  }
+  a{
+    margin: 8px;
   }
 }
+
