--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,12 +6,27 @@
           <%= image_tag 'open-menu.svg' %>
         </a>
         <div id="myNav" class="overlay hidden">
-          <a href="#" class="closebtn">&times;</a>
           <div class="overlay-content">
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
-            <a href="#">Contact</a>
+            <div class="overlay-left">
+              <div class="logo">
+                <a href="#"><%= image_tag 'heron-logo.png' %></a>
+              </div>
+              <div class="overlay-menu">
+                <p>Produits</p>
+                <ul>
+                  <li><a href="#">Alimentation</a></li>
+                  <li><a href="#">Beauté</a></li>
+                  <li><a href="#">Décoration</a></li>
+                  <li><a href="#">Mode</a></li>
+                </ul>
+                <p><a href="#">Boutiques</a></p>
+                <p><a href="#">Mon compte</a></p>
+                <p><a href="#">Contact</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="closebtn">
+            <a href="#"><%= image_tag 'close.svg' %></a>
           </div>
         </div>
       </li>
