--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -5,6 +5,6 @@
 /* For a screen < 540px, this CSS will be read */
 @media (max-width: 540px) {
   .content {
-    margin: 10px 20px;
+    margin: 10px 0;
   }
 }
