--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
         <a class="nav-link" href="#" id="burgermenu">
           <%= image_tag 'open-menu.svg' %>
         </a>
-        <div id="myNav" class="overlay hidden">
+        <div id="myNav" class="overlay">
           <div class="overlay-content">
             <div class="overlay-left">
               <div class="logo">
