--- a/app/assets/stylesheets/components/_product-details-card.scss
+++ b/app/assets/stylesheets/components/_product-details-card.scss
@@ -116,8 +116,19 @@
     }
   }
 
-  .product-variations {
-    justify-content: normal;
+  .product-variations{
+    justify-content: center;
+  }
+
+  .product-description{
+    margin: 20px;
+    h3{
+      margin-bottom: 20px;
+    }
+
+    p{
+      font-size: 18px;
+    }
   }
 }
 
