--- a/app/assets/stylesheets/components/_filtering.scss
+++ b/app/assets/stylesheets/components/_filtering.scss
@@ -31,8 +31,14 @@
   display:none;
 }
 /* For a screen < 960px, this CSS will be read */
-@media (max-width: 960px) {
-
+@media (max-width: 1087px) {
+    #sort{
+    display:none;
+  }
+  #filter-icon{
+    display:block;
+    width: 30px;
+  }
 }
 
 /* For a screen < 720px, this CSS will be read */
@@ -48,5 +54,11 @@
 
 /* For a screen < 540px, this CSS will be read */
 @media (max-width: 540px) {
-
+    #sort{
+    display:none;
+  }
+  #filter-icon{
+    display:block;
+    width: 30px;
+  }
 }
