--- a/app/assets/stylesheets/components/_product-card.scss
+++ b/app/assets/stylesheets/components/_product-card.scss
@@ -38,7 +38,21 @@
 
 /* For a screen < 960px, this CSS will be read */
 @media (max-width: 960px) {
-
+.product-img{
+  height: 200px;
+  width: 100%;
+  }
+  .price{
+    font-size: 1rem;
+  }
+  .product-infos{
+    h4{
+      font-size: 1.02rem;
+    }
+    p{
+      font-size: 1rem;
+    }
+  }
 }
 
 /* For a screen < 720px, this CSS will be read */
@@ -62,5 +76,19 @@
 
 /* For a screen < 540px, this CSS will be read */
 @media (max-width: 540px) {
-
+.product-img{
+  height: 180px;
+  width: 100%;
+  }
+  .price{
+    font-size: 1rem;
+  }
+  .product-infos{
+    h4{
+      font-size: 1.02rem;
+    }
+    p{
+      font-size: 1rem;
+    }
+  }
 }
