Added javascript with active/hidden classes for merchant application confirmation

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,9 @@
 <div class="content merchant-container">
   <div class="row merchant-form">
-    <div class="col-xs-12 col-sm-10">
+    <div class="col-xs-12 col-sm-10 form-merchant" id="form-merchant">
       <%= render 'form' %>
     </div>
-    <div class="col-xs-12 col-sm-10 confirmation-message ">
+    <div class="col-xs-12 col-sm-10 confirmation-message hidden" id="confirmation-merchant">
       <%= render 'confirmation' %>
     </div>
   </div>
