--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -57,7 +57,7 @@
 </div>
 <div class="row">
   <div class="col-sm-12">
-    <%= f.submit "APPLY", class: "add-cart-btn" %>
+    <%= f.submit "APPLY", class: "add-cart-btn apply-btn" %>
   </div>
 </div>
 <% end %>
