Added dynamic transition to confirmation form

--- a/app/views/posts/_confirmation.html.erb
+++ b/app/views/posts/_confirmation.html.erb
@@ -1,5 +1,5 @@
-<div class="col-xs-12 col-sm-12">
-  <h1>Thank You for for application</h1>
+<div class="col-xs-12 col-sm-12 text-center">
+  <h1>Thank You for your application</h1>
   <h6>We will review your application and we will contact you shortly!</h6>
   <p><em>- Heron Market Team</em></p>
   <div>
