--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -16,7 +16,7 @@
 .carousel-inner{
   height: 100%;
 }
-.carousel-prev, .carousel-next{
+.carousel-next{
   position: absolute;
   bottom: -22px;
   z-index: 1;
@@ -31,10 +31,7 @@
   right:0;
 }
 .carousel-prev{
-  left:0;
-  img{
-    transform: rotate(180deg);
-  }
+  display: none;
 }
 
 /* For a screen < 540px, this CSS will be read */
