--- a/app/assets/stylesheets/components/_merchant-details.scss
+++ b/app/assets/stylesheets/components/_merchant-details.scss
@@ -46,3 +46,33 @@
     margin-left:16px;
   }
 }
+
+/* For a screen < 540px, this CSS will be read */
+@media (max-width: 540px) {
+  .merchant-details{
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: none;
+  }
+
+  .merchant-infos{
+    border-right: none;
+    border-bottom: 1px solid black;
+    padding-right: 0px;
+    margin: 20px;
+    text-align: center;
+  }
+
+  .merchant-labels{
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 14px;
+    border-right: none;
+    padding: 0 45px;
+    img{
+      width: 50px;
+      height: 50px;
+      justify-self: center;
+    }
+  }
+}
