--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -33,3 +33,16 @@
   width: 100%;
   margin-bottom: 20px;
 }
+
+/* For a screen < 540px, this CSS will be read */
+@media (max-width: 540px) {
+  .product-list-header{
+    margin: 20px;
+    width: 92%;
+  }
+  .merchant-product-list{
+    width: 100vw;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
