--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,13 +2,12 @@
   display: flex;
   font-family: $poppins;
   flex-direction: column;
-  padding: 0 24px;
+  padding: 24px;
   position: relative;
   bottom: 0;
   width: 100%;
   font-size: 14px;
   font-weight: 200;
-  padding-top: 40px;
 }
 .footer-menu {
   display: flex;
