--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -59,6 +59,10 @@
     <div id="opening-icon"><%= image_tag 'quote-icon' %></div>
         <p><%= @merchant.comment %></p>
     <div id="closing-icon"><%= image_tag 'quote-icon' %></div>
+    <div id="founder">
+      <div id="line"></div>
+      <p>Clémence Founder</p>
+    </div>
   </div>
 
 
