--- a/app/assets/stylesheets/components/_merchant-comment.scss
+++ b/app/assets/stylesheets/components/_merchant-comment.scss
@@ -1,6 +1,18 @@
 .merchant-comment{
   background:#D7ECF1;
   text-align: center;
-  padding: 80px 36px;
+  padding: 20px 40px;
   margin-bottom: 60px;
+}
+
+/* For a screen < 540px, this CSS will be read */
+@media (max-width: 540px) {
+  .merchant-comment{
+    width: 100vw;
+    position: relative;
+    right: 10px;
+    p {
+      text-align: left;
+    }
+  }
 }
