--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -55,7 +55,7 @@
 
 /* For a screen < 960px, this CSS will be read */
 @media (max-width: 960px) {
-    .connexion-forms{
+  .connexion-forms{
     margin:50px 0;
   }
   .tab-content{
@@ -80,6 +80,9 @@
   }
   .tab-content{
     width: 100%;
+  }
+  .tab-group{
+    width: 90%;
   }
 }
 
