Made merchant application form and confirmation message responsive

--- a/app/views/posts/_confirmation.html.erb
+++ b/app/views/posts/_confirmation.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-12 text-center">
+<div class="confirmation-message">
   <h1>Thank You for your application</h1>
   <h6>We will review your application and we will contact you shortly!</h6>
   <p><em>- Heron Market Team</em></p>
