--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,9 @@
 <div class="content merchant-container">
-  <div class="row merchant-form">
-    <div class="col-xs-12 col-sm-10" id="form-merchant">
+  <div class="merchant-form">
+    <div id="form-merchant">
       <%= render 'form' %>
     </div>
-    <div class="col-xs-12 col-sm-10 hidden" id="confirmation-merchant">
+    <div class="hidden" id="confirmation-merchant">
       <%= render 'confirmation' %>
     </div>
   </div>
