--- a/app/assets/stylesheets/pages/_merchant.scss
+++ b/app/assets/stylesheets/pages/_merchant.scss
@@ -1,11 +1,26 @@
-.merchant-form {
-  justify-content: center;
+.merchant-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 80px;
 }
 
-.confirmation-message{
-  margin-top: 32px;
-  text-align: center;
-  align-items: center;
+.merchant-form {
+  justify-content: center;
+  width: 70%;
+}
+
+.double-input {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-spacing {
+  width: 14px;
+}
+
+.merchant-form-input {
+  width: 49%;
 }
 
 .merchant-form-message {
@@ -15,6 +30,11 @@
 .merchant-form-content{
   margin: 40px 50px;
   justify-content: center;
+}
+
+.confirmation-message{
+  text-align: center;
+  align-items: center;
 }
 
 .hidden-confirmation {
@@ -45,5 +65,45 @@ p {
   font-size: 1.25em;
   &.success {
     color: #73AF55;
+  }
+}
+
+/* For a screen < 720px, this CSS will be read */
+@media (max-width: 1024px) {
+  .merchant-form {
+    width: 90%;
+  }
+  .form-spacing {
+    width: 13px;
+  }
+}
+
+/* For a screen < 540px, this CSS will be read */
+@media (max-width: 540px) {
+  .merchant-form {
+    width: 90%;
+  }
+  .form-spacing {
+    display: none;
+  }
+  .merchant-form-input {
+    width: 100%;
+  }
+  .confirmation-message{
+    h1 {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+    h6 {
+      margin-top: 24px;
+      font-size: 1rem;
+      font-weight: normal;
+    }
+    p {
+      margin-bottom: 30px;
+    }
+  }
+  svg {
+    width: 150px;
   }
 }
