--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,18 +11,17 @@
     <!-- product picture carousel -->
     <div id="product-carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
-        <% @product.photos.each do |photo| %>
-          <%= cl_image_tag photo.key, height: 400, width: 300, crop: :fill %>
+        <% @product.photos.each_with_index do |photo, index| %>
+          <% if index == 0 %>
+            <div class="carousel-item active carousel-product-img">
+              <%= cl_image_tag photo.key, height: 400, width: 300, crop: :fill %>
+            </div>
+          <% else %>
+            <div class="carousel-item carousel-product-img">
+              <%= cl_image_tag photo.key, height: 400, width: 300, crop: :fill %>
+            </div>
+          <% end %>
         <% end %>
-<!--         <div class="carousel-item active carousel-product-img">
-          <img src="<%= @product.photo_1 %>" alt="">
-        </div>
-        <div class="carousel-item carousel-product-img">
-          <img src="<%= @product.photo_2 %>" alt="">
-        </div>
-        <div class="carousel-item carousel-product-img">
-          <img src="<%= @product.photo_3 %>" alt="">
-        </div> -->
       </div>
       <a class="carousel-prev" href="#product-carousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"><%= image_tag 'right-arrow-icon' %></span>
