--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,10 +27,13 @@
         <span class="carousel-control-prev-icon" aria-hidden="true"><%= image_tag 'right-arrow-icon' %></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-next" href="#product-carousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"><%= image_tag 'right-arrow-icon' %></span>
-        <span class="sr-only">Next</span>
-      </a>
+
+      <% if @product.photos.length > 1 %>
+        <a class="carousel-next" href="#product-carousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"><%= image_tag 'right-arrow-icon' %></span>
+          <span class="sr-only">Next</span>
+        </a>
+      <% end %>
     </div>
     <div class="product-details">
       <div class="product-details-header">
