--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,15 +11,24 @@
     <!-- product picture carousel -->
     <div id="product-carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active carousel-product-img">
-          <img src="<%= @product.photo_1 %>" alt="">
-        </div>
-        <div class="carousel-item carousel-product-img">
-          <img src="<%= @product.photo_2 %>" alt="">
-        </div>
-        <div class="carousel-item carousel-product-img">
-          <img src="<%= @product.photo_3 %>" alt="">
-        </div>
+        <% if @product.photos.empty? %>
+          <div class="carousel-item active carousel-product-img">
+            <img src="<%= @product.photo_1 %>" alt="">
+          </div>
+          <div class="carousel-item carousel-product-img">
+            <img src="<%= @product.photo_2 %>" alt="">
+          </div>
+          <div class="carousel-item carousel-product-img">
+            <img src="<%= @product.photo_3 %>" alt="">
+          </div>
+        <% else %>
+          <% @product.photos.each do |photo| %>
+            <div class="carousel-item carousel-product-img">
+              <%= cl_image_tag photo.key %>
+            </div>
+          <% end %>
+
+        <% end %>
       </div>
       <a class="carousel-prev" href="#product-carousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"><%= image_tag 'right-arrow-icon' %></span>
