--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,11 +14,11 @@
         <% @product.photos.each_with_index do |photo, index| %>
           <% if index == 0 %>
             <div class="carousel-item active carousel-product-img">
-              <%= cl_image_tag photo.key, height: 400, width: 300, crop: :fill %>
+              <%= cl_image_tag photo.key %>
             </div>
           <% else %>
             <div class="carousel-item carousel-product-img">
-              <%= cl_image_tag photo.key, height: 400, width: 300, crop: :fill %>
+              <%= cl_image_tag photo.key %>
             </div>
           <% end %>
         <% end %>
