--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -31,7 +31,7 @@
     <div class="product-list">
       <% @products.each do |product| %>
             <div class="product-card">
-              <div class="product-img" style ="background-image: url(<%= product.photos[0] %>)">
+              <div class="product-img" style ="background-image: url(<%= cl_image_path product.photos[0].key %>)">
                 <div class="price">
                   <p><%= product.price %>$</p>
                 </div>
