Added linkin the footer to merchant application request form

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,30 +3,36 @@
     <div class="footer-item">
       <h4>Héron</h4>
       <ul>
-        <li><a href="#">À propos</a></li>
+        <li><a href="#">About Us</a></li>
         <li><a href="#">FAQ</a></li>
       </ul>
     </div>
     <div class="footer-item">
-      <h4>Mon compte</h4>
+      <h4>Merchant</h4>
       <ul>
-        <li><a href="#">Mes commandes</a></li>
-        <li><a href="#">Liste de souhaits</a></li>
-        <li><a href="#">Mes infos</a></li>
+        <li><a href="../posts/new">Apply</a></li>
       </ul>
     </div>
     <div class="footer-item">
-      <h4>Magasinez</h4>
+      <h4>My Account</h4>
       <ul>
-        <li><a href="#">Mode</a></li>
-        <li><a href="#">Décorations</a></li>
-        <li><a href="#">Beauté</a></li>
-        <li><a href="#">Alimentation</a></li>
+        <li><a href="#">My Orders</a></li>
+        <li><a href="#">My Wishlist</a></li>
+        <li><a href="#">My Information</a></li>
+      </ul>
+    </div>
+    <div class="footer-item">
+      <h4>Shop</h4>
+      <ul>
+        <li><a href="#">Fashion</a></li>
+        <li><a href="#">Home Decor</a></li>
+        <li><a href="#">Beauty</a></li>
+        <li><a href="#">Food</a></li>
       </ul>
     </div>
     <div class="footer-item">
       <div id="footer-contact">
-        <h4>Mon compte</h4>
+        <h4>Contact Us</h4>
         <p>1234 Sainte-Catherine<br>H3J 2H4, Montreal</p>
         <p>(514) 123-4567</p>
       </div>
@@ -37,10 +43,10 @@
     </div>
     <div class="footer-item-mobile">
       <ul>
-        <li><a href="#">À propos</a></li>
+        <li><a href="#">About Us</a></li>
         <li><a href="#">FAQ</a></li>
-        <li><a href="#">Termes et conditions</a></li>
-        <li><a href="#">Politiques de confidentialité</a></li>
+        <li><a href="#">Terms and Conditions</a></li>
+        <li><a href="#">Confidentiality Policies</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
 
@@ -52,7 +58,7 @@
   </div>
   <div class="footer-credit">
     <p>© 2020 - Héron</p>
-    <a href="#">Termes et conditions</a>
-    <a href="#">Politiques de confidentialité</a>
+    <a href="#">Terms and Conditions</a>
+    <a href="#">Confidentiality Policies</a>
   </div>
 </div>
