Added Heron logo home route in navigation

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
           <div class="overlay-content">
             <div class="overlay-left">
               <div class="logo">
-                <a href="#"><%= image_tag 'heron-logo.png' %></a>
+                <a href="/"><%= image_tag 'heron-logo.png' %></a>
               </div>
               <div class="overlay-menu">
                 <p>Produits</p>
@@ -32,7 +32,7 @@
     </ul>
   </div>
   <div class="logo">
-    <a href="#"><%= image_tag 'heron-logo.png' %></a>
+    <a href="/"><%= image_tag 'heron-logo.png' %></a>
   </div>
   <div class="main-menu">
     <ul class="categories-list">
