--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,7 +1,12 @@
 <ul>
   <% @cart.line_items.each do |line_item| %>
-    <li><%= line_item.product.name %> -
-        <%= link_to line_item_path(line_item.id), method: "delete", data: { confirm: "Are you sure?" } do %>
+    <li>
+      <%= line_item.product.name %><br>
+      <%= line_item.product.merchant.name %><br>
+      Price: <%= line_item.product.price %>$<br>
+      <br>
+      Quantity: <%= line_item.quantity %><br>
+      <%= link_to line_item_path(line_item.id), method: "delete", data: { confirm: "Are you sure?" } do %>
         <i class="far fa-trash-alt"></i>
       <% end %>
     </li>
