added link to cart on shopping bag icon in navbar

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -6,7 +6,7 @@
       Price: <%= line_item.product.price %>$<br>
       <br>
       Quantity: <%= line_item.quantity %><br>
-      <%= link_to line_item_path(line_item.id), method: "delete", data: { confirm: "Are you sure?" } do %>
+      <%= link_to line_item_path(line_item.id), method: "delete" do %>
         <i class="far fa-trash-alt"></i>
       <% end %>
     </li>
