added popup successfully added to your cart

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -40,7 +40,7 @@
                     <a href="#"><%= image_tag 'love-list-icon'%></a>
                   </div>
                   <div class="icon-btn">
-                    <%= link_to line_items_path(product_id: product), method: 'CREATE' do %>
+                    <%= link_to line_items_path(product_id: product), method: 'CREATE', class: 'add-to-cart' do %>
                       <%= image_tag 'shopping-bag-icon' %>
                     <% end %>
                   </div>
