--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -44,7 +44,7 @@
       <li class="icon" id="connect-user"><a href="#"><%= image_tag 'user-icon.svg' %></a></li>
       <li class="icon"><a href="#"><%= image_tag 'love-list-icon.svg' %></a></li>
       <li id="shopping-bag"><%= link_to cart_path(@cart), class: 'icon' do %>
-        <%= image_tag 'shopping-bag-icon.svg'%>
+        <%= image_tag 'shopping-bag-icon.svg', class: 'shopping-bag-black' %>
         <% end %>
       </li>
       <li><a href="#">FR</a></li>
