Added Pitures upload to accept_invitation

--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -14,6 +14,10 @@
     <%= f.input :website %>
     <%= f.input :instagram %>
     <%= f.input :facebook %>
+    <%= f.input :picture_1, as: :file %>
+    <%= f.input :picture_2, as: :file %>
+    <%= f.input :picture_3, as: :file %>
+    <%= f.input :picture_4, as: :file %>
     <%= f.input :password %>
     <%= f.input :password_confirmation %>
   </div>
