Updated invation form to allow the admin to enter comments on the brand prior on the merchant creating their account

--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -1,6 +1,6 @@
 <h2><%= t "devise.invitations.edit.header" %></h2>
 
-<h6>Complete this form as it will be the information displayed to the Heron Marketplace customers. As a company which pride itself in offering products to our customers from brands and female founded companies who carry their business activities integrity, we want to be as transparent as possible ourselves.</h6>
+<h6>Complete this form as it will be the information displayed to the Heron Marketplace customers. As a company which pride itself in offering products to our customers from brands and female founded companies who carry their business activities integrity, we want to be as transparent as possible ourselves. the following information will be displayed on your personal merchant profile page.</h6>
 
 <%= simple_form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
