--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -6,6 +6,7 @@
   <% resource.class.invite_key_fields.each do |field| -%>
     <div class="form-inputs">
       <%= f.input field %>
+      <%= f.input :comment, :as => :text %>
     </div>
   <% end -%>
 
