--- a/app/views/devise/mailer/invitation_instructions.text.erb
+++ b/app/views/devise/mailer/invitation_instructions.text.erb
@@ -2,6 +2,8 @@
 
 <%= t("devise.mailer.invitation_instructions.someone_invited_you", url: root_url) %>
 
+<%= "To officially be part of the exclusive Heron Market merchant program you have to accept our invitation by clicking on the link below." %>
+
 <%= accept_invitation_url(@resource, invitation_token: @token) %>
 
 <% if @resource.invitation_due_at %>
