--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for(@product) do |f| %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.input :sub_category_id, collection: SubCategory.all %>
-  <%= f.input :labels, as: :check_boxes, collection: Label.all %>
+  <%= f.input :label_ids, as: :check_boxes, collection: Label.all %>
   <%= f.input :name %>
   <%= f.input :description %>
   <%#= f.input :sku %>
