--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -6,8 +6,10 @@
   <%= f.input :description %>
   <%#= f.input :sku %>
   <%= f.input :price %>
-  <%= f.simple_fields_for :product_variants do |u| %>
-    <%= u.input :size_ids, as: :check_boxes, collection: Size.all %>
-  <% end %>
+  <%= f.input :stock_XS, as: :integer, input_html: { value: nil }  %>
+  <%= f.input :stock_S, as: :integer, input_html: { value: nil }  %>
+  <%= f.input :stock_M, as: :integer, input_html: { value: nil }  %>
+  <%= f.input :stock_L, as: :integer, input_html: { value: nil }  %>
+  <%= f.input :stock_XL, as: :integer, input_html: { value: nil }  %>
   <%= f.submit 'Add product', class: ".add-cart-btn"%>
 <% end %>
