--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,11 @@
 <%= simple_form_for(@product) do |f| %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-  <%= f.input :category, input_html: { value: nil }, as: :check_boxes, collection: Category.all %>
-  <%= f.input :sub_category_id, collection: SubCategory.all %>
+  <div class='category-form-group'>
+    <%= f.input :category, input_html: { value: nil }, as: :radio_buttons, collection: Category.all %>
+  </div>
+  <div class='d-none'>
+    <%= f.input :sub_category_id, collection: SubCategory.all %>
+  </div>
   <%= f.input :label_ids, as: :check_boxes, collection: Label.all %>
   <%= f.input :name %>
   <%= f.input :description %>
@@ -12,5 +16,5 @@
   <%= f.input :stock_M, as: :integer, input_html: { value: nil }  %>
   <%= f.input :stock_L, as: :integer, input_html: { value: nil }  %>
   <%= f.input :stock_XL, as: :integer, input_html: { value: nil }  %>
-  <%= f.submit 'Add product', class: ".add-cart-btn"%>
+  <%= f.submit 'Add product', class: "add-cart-btn"%>
 <% end %>
