--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,9 +1,9 @@
 <ul>
   <% @cart.line_items.each do |line_item| %>
     <li>
-      <%= line_item.product.name %><br>
-      <%= line_item.product.merchant.name %><br>
-      Price: <%= line_item.product.price %>$<br>
+      <%= line_item.product_variant.product.name %><br>
+      <%= line_item.product_variant.product.merchant.name %><br>
+      Price: <%= line_item.product_variant.product.price %>$<br>
       <br>
       Quantity: <%= line_item.quantity %><br>
       <%= link_to line_item_path(line_item.id), method: "delete" do %>
