--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,10 +1,8 @@
 <%= simple_form_for(@product) do |f| %>
-  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+  <%#= image_tag "", width: 300, class: "hidden", id: "photo-preview" %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true}%>
   <div class='category-form-group'>
     <%= f.input :category, input_html: { value: nil }, as: :radio_buttons, collection: Category.all %>
-  </div>
-  <div class='d-none'>
-    <%= f.input :sub_category_id, collection: SubCategory.all %>
   </div>
   <%= f.input :label_ids, as: :check_boxes, collection: Label.all %>
   <%= f.input :name %>
