shopping bag icon white when cart empty, black when products in cart

--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -83,7 +83,7 @@
               <a href="#"><%= image_tag 'love-list-icon'%></a>
             </div>
             <div class="icon-btn">
-              <a href="#"><%= image_tag 'shopping-bag-icon' %></a>
+              <a href="#"><%= image_tag 'shopping-bag-icon-white' %></a>
             </div>
           </div>
         </div>
